[package]
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
edit-distance = "2.0"
parity-crypto = { git = "https://github.com/cheme/parity-common.git", branch = "wasm-test" }
ethereum-types = "0.4"
lazy_static = "1.0"
log = "0.4"
mem = { path = "../util/mem" }
#parity-wordlist="1.2"
parity-wordlist={ git = "https://github.com/cheme/wordlist.git", branch = "wasm-test" }
#parity-wordlist={ path = "../../../wordlist" }
quick-error = "1.2.2"
rand = "0.4"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.4"
