[package]
name = "evmbin"
description = "Parity's EVM implementation"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[[bin]]
name = "parity-evm"
path = "./src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
docopt = "0.8"
env_logger = "0.5"
ethcore = { path = "../ethcore", features = ["json-tests"] }
ethjson = { path = "../json" }
parity-bytes = "0.1"
ethcore-transaction = { path = "../ethcore/transaction" }
ethereum-types = "0.4"
evm = { path = "../ethcore/evm" }
panic_hook = { path = "../util/panic_hook" }
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
vm = { path = "../ethcore/vm" }
parity-wasm-compat = { git = "https://github.com/cheme/parity-common.git", branch = "wasm-test" }

[dev-dependencies]
pretty_assertions = "0.1"
tempdir = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
evm-debug = ["ethcore/evm-debug-tests"]
