[package]
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
byteorder = "1.0"
edit-distance = "2.0"
parity-crypto = "0.2"
ethereum-types = "0.4"
lazy_static = "1.0"
log = "0.4"
memzero = { path = "../../util/memzero" }
parity-wordlist = "1.2"
quick-error = "1.2.2"
rand = "0.5"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.4"
parity-wasm-compat = { git = "https://github.com/cheme/parity-common.git", branch = "wasm-test" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
rand = "0.5"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.4" # TODO switch all to 0.5 (requires to switch libsecp)
