[package]
name = "ethkey-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
docopt = "0.8"
env_logger = "0.5"
ethkey = { path = "../" }
panic_hook = { path = "../../util/panic_hook" }
#parity-wordlist="1.2"
parity-wordlist={ git = "https://github.com/cheme/wordlist.git", branch = "wasm-test" }
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
#parity-wasm-compat = { git = "https://github.com/cheme/parity-common.git", branch = "wasm-test" }
parity-wasm-compat = { path = "../../../../parity-common/parity-wasm-compat" }

[[bin]]
name = "ethkey"
path = "src/main.rs"
doc = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

