[package]
name = "dir"
version = "0.1.2"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL3"

[dependencies]
ethereum-types = "0.4"
journaldb = { path = "../journaldb" }
app_dirs = { git = "https://github.com/paritytech/app-dirs-rs" }
parity-wasm-compat = { git = "https://github.com/cheme/parity-common.git", branch = "wasm-test" }
