[package]
name = "patricia-trie-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
patricia-trie = "0.3.0"
keccak-hasher = { version = "0.1.1", path = "../keccak-hasher" }
hashdb = "0.3.0"
rlp = "0.3.0"
parity-bytes = "0.1"
ethereum-types = "0.4"
elastic-array = "0.10"
kvdb = { version = "0.1" } #, path = "../kvdb" }
kvdb-rocksdb = "0.1.4"
rkv = "0.7.0"

memorydb = { version = "0.3.0" }#, path = "../memorydb", default-features = false }
[dev-dependencies]
memorydb = "0.3.0"
keccak-hash = "0.1.2"
